# hermes-2.0

./: .gitignore  AMBIENTE.md  HERMES_UPDATE_GUARD.md  README.md  README_backup.md  SPEC.md  SPEC_ARQUITETURA_HERMES.md  THIRD_PARTY_NOTICES.md  admin_server.py  agent.yaml  auditor_realidade.py  auto_contrib.sh  backup_toth.bat  build_exe.bat  core.py  create_desktop_shortcut.ps1  create_startup_shortcut.ps1  daily_log.md  engine.py  finalizer-loop.sh  finalizer.py  fix_shortcuts.ps1  free-claude-code-analysis.md  frente_pesquisa_frameworks.py  headroom  headroom-start.sh  headroom.bat  headroom_cache.py  healer.py  hermes-backup.sh  hermes-config-essentials.md  hermes-fort-knox-restore.sh  hermes-fort-knox.sh  hermes-progress.md  hermes-workbench.spec  hermes31_superseding_claude.py  hermes_doctor.py  hermes_imaginario.py  hermes_llm_report.py  hermes_loop.py  (+43 more)
.hermes/: AGENTS.md
arquitetura-code-review/: SKILL.md
auto-assembly-workflow/: SKILL.md
cli/: hermes-claude.sh  hermes-codex.sh  hermes-launcher.py
conselho-ias/: SKILL.md
dag-workflow/: SKILL.md
docs/: HERMES_3_SOFTWARE_FACTORY.md  README.md  STRUCTURE.md  hermes-neo-arquitetura.md  kimi-code-melhorias-para-hermes.md  relatorio_comparativo.py
estudo-concorrentes/: SKILL.md
fontes-auditoria/: SKILL.md
fontes-china-japao-2026/: SKILL.md
hermes/: ativar_headroom.bat  config.example.yaml  env.example  headroom_proxy.py  headroom_proxy.py.v2-ok  headroom_watchdog.py  kill_port_8787.bat  rollback_headroom.bat  startup_headroom.bat
hermes-hooks/: SKILL.md
hooks/: notify.py  validate.py
jornal/: catalogo_artificial_analysis.md  dedup_check.py  dedup_filter.py  index.html  lista_completa_ia_scanner_final.csv
neo-hermes/: SKILL.md
oss-absorb/: SKILL.md
scripts/: analisar_base.py  (+5 more)
(+178 files in other folders)
