[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hermes-workbench"
version = "0.2.0"
description = "Hermes 2.0 — CLI Unificada com watchdog, router e ferramentas de IA"
authors = [{name = "GUILHERME CREPALDI"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["app/", "node_modules/", "docs/", "cli/", "watchdog/hermes_workbench.py", "watchdog/s3_headroom.py", "watchdog/s3_grep.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501", "E722", "E741", "N806"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "network: tests that make real network requests (skip in CI)",
]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
exclude = ["app/"]
